src/test/deca/etapeB/invalid/decl_var_void.res
./src/test/deca/etapeB/invalid/decl_var_void.deca:7:5: type shouldn't be void in declaration
